--- a/config/locales/hyrax.ja.yml
+++ b/config/locales/hyrax.ja.yml
@@ -18,17 +18,17 @@ ja:
       fields:
         facet:
           admin_set_sim: 管理セット
-          member_of_collections_ssim: Collection
+          member_of_collections_ssim: コレクション
           resource_type_sim: Resource type
-          suppressed_bsi: Status
+          suppressed_bsi: 状態
         show:
-          admin_set: 'In Administrative Set:'
+          admin_set: '所属する管理セット:'
           based_near_label: Location
-          contributor: Contributors
+          contributor: 貢献者
           keyword: キーワード
       filters:
-        title: 'Filtering by:'
-      start_over: Start Over
+        title: '次の条件で絞り込む:'
+      start_over: 最初からやり直す
   errors:
     messages:
       carrierwave_download_error: Couldn't download image.
@@ -51,7 +51,7 @@ ja:
       edit: 編集
       less: Less
       more: More
-      refresh: Refresh
+      refresh: 更新
       remove: 削除
       work:
         new: 著作を作成
@@ -66,7 +66,7 @@ ja:
       hyrax_permission_template_access:
         create: 追加
       proxy_deposit_request:
-        create: Transfer
+        create: 譲渡
       update: 変更を保存
   hyrax:
     account_label: ユーザ
@@ -108,7 +108,7 @@ ja:
           admin_users: Repository Administrators
           allow_all_registered: Allow all registered users to deposit
           depositors:
-            action: Action
+            action: 操作
             agent_name: Depositors of This Set
             empty: No depositors have been added to this administrative set.
             help: Depositors can add new works to this administrative set.
@@ -116,8 +116,8 @@ ja:
             title: Depositors
             type: 種別
           managers:
-            action: Action
-            agent_name: Managers of This Set
+            action: 操作
+            agent_name: このセットの管理者
             empty: No managers have been added to this administrative set.
             help: Managers of this administrative set can edit the set metadata, participants, and release and visibility settings. Managers can also edit work metadata, add to or remove files from a work, and add new works to the set.
             remove: 削除
@@ -125,7 +125,7 @@ ja:
             type: 種別
           registered_users: Registered Users
           viewers:
-            action: Action
+            action: 操作
             agent_name: Viewers of This Set
             empty: No viewers have been added to this administrative set.
             help: Viewers of this administrative set can view works in the set regardless of the visibility settings applied to the work. For example, viewers can view works in this set even if the works are currently embargoed or restricted.
@@ -180,14 +180,14 @@ ja:
           header: 画面の表示
         update:
           flash:
-            success: The appearance was successfully updated
+            success: 画面の表示は正常に更新されました
       collection_types:
         create:
           notification: The collection type %{name} has been created.
         delete:
           notification: The collection type %{name} has been deleted.
         edit:
-          header: Edit Collection Type
+          header: コレクションの種別の編集
           submit: 変更を保存
         errors:
           no_settings_change_for_admin_sets: Collection type settings cannot be altered for the Administrative Set type
@@ -196,65 +196,65 @@ ja:
           not_empty: Collection type cannot be altered as it has collections
         form:
           tab:
-            appearance: Badge Color
+            appearance: バッジの色
             metadata: Description
             participants: Participants
             settings: 設定
         form_participant_table:
           creators:
-            action: Action
-            agent_name: Collection Creators
+            action: 操作
+            agent_name: コレクションの作成者
             empty: No creators have been added to this collection type.
             help: Creators of collections of this type can create and manage their own collections.
-            title: Creators
+            title: 作成者
             type: 種別
           managers:
-            action: Action
-            agent_name: Collection Managers
-            empty: No managers have been added to this collection type.
+            action: 操作
+            agent_name: コレクションの管理者
+            empty: このコレクションの種別には管理者が追加されていません。
             help: Managers of collections of this type can edit collections other users have created, including adding to and removing works from a collection, modifying collection metadata, and deleting collections.
-            title: Managers
+            title: 管理者
             type: 種別
         form_participants:
-          add_group: Add group
+          add_group: グループを追加
           add_participants: Add Participants
-          add_user: Add user
+          add_user: ユーザを追加
           current_participants: Current Participants
-          header: Collection Participants
+          header: コレクションの参加者
           instructions: You can designate both groups and users as creators and managers of collections of this type
           remove_success: Participant Removed
-          submit: Add
+          submit: 追加
           update_notice: Participants Updated
         form_settings:
           instructions: These settings determine how collections of this type can be managed and discovered.
           warning: 'Warning: These settings cannot be changed after a collection of this type has been created.'
         index:
-          breadcrumb: Collection Types
-          create_new_button: Create new collection type
+          breadcrumb: コレクションの種別
+          create_new_button: 新しいコレクションの種別を作成
           description: Collection types enable you to define settings that govern collections that serve different purposes in your repository.  You can define as many collection types as you need.
-          header: Collection Types
+          header: コレクションの種別
           modal:
             can_delete_body_html: "<p>Deleting this collection type will permanently remove the type and its settings from the repository.  Are you sure you want to delete this collection type?</p>"
             cannot_delete_body_html: "<p>You cannot delete this collection type because one or more collections of this type have already been created.</p> <p>To delete this collection type, first ensure that all collections of this type have been deleted.</p>"
-            header_can_delete: Delete Collection Type?
+            header_can_delete: コレクションの種別を削除しますか？
             header_cannot_delete: Cannot Delete Collection Type
             view_collections: View collections of this type
           more_toggle_content_html: "<p>Typical scenarios for collection types include:</p> <ul> <li><strong>User Collections</strong> that any registered user can create to organize items they deposit.</li> <li><strong>Exhibits</strong> that staff create and curate for public display, where items can be included in any number of exhibits.</li> <li><strong>Controlled Collections</strong> created and managed by staff and not intended for public display, such as collections associated with organizational units or departments.</li> <li><strong>Community Collections</strong> that are intended for public display, similar to how DSpace communities and collections are sometimes used.</li> </ul>"
           more_toggle_header_html: "<span>More</span> about collection types"
           table:
-            actions: Actions
-            name: Name
+            actions: 操作
+            name: 名称
         multiple_membership_checker:
           error_preamble: 'Error: You have specified more than one of the same single-membership collection type '
           error_type_and_collections: "(type: %{type}, collections: %{collections})"
         new:
-          header: Create New Collection Type
+          header: 新しいコレクションの種別を作成
           submit: 保存
         update:
           notification: The collection type %{name} has been updated.
       features:
         index:
-          action: Action
+          action: 操作
           description: 説明
           feature: 機能
           header: 機能
@@ -308,15 +308,15 @@ ja:
           role_label: Roles
           title: Manage Users
       workflow_roles:
-        header: Workflow Roles
+        header: ワークフローの権限
         index:
-          current_roles: Current Roles
+          current_roles: 現在の権限
           delete:
             confirm: Are you sure?
           header:
-            roles: Roles
-            user: User
-          new_role: Assign Role
+            roles: 権限
+            user: ユーザ
+          new_role: 権限の割り当て
           no_roles: No roles
       workflows:
         index:
@@ -350,14 +350,14 @@ ja:
       form_child_work_relationships:
         actions:
           remove: Remove from this work
-        attach_new_work: Deposit new work as child of this work
+        attach_new_work: このワークの子として新しい著作を登録
         caption: This work currently contains these child works
         confirm:
           cancel: キャンセル
           remove: 削除
           text: Removing this child work will not remove it from the repository, only from this parent work.  Are you sure you want to remove this work from this parent work?
         header:
-          actions: Action
+          actions: 操作
           title: Work title
       form_files:
         dropzone: ここにファイルをドロップしてください。
@@ -371,15 +371,15 @@ ja:
         local_upload_html: "<p>You can add one or more files to associate with this work.</p>"
       form_member_of_collections:
         actions:
-          remove: Remove from collection
-        caption: This work is currently in these collections
+          remove: コレクションから削除
+        caption: この著作は現在以下のコレクションに所属しています
         confirm:
           cancel: キャンセル
           remove: 削除
           text: Removing this work will not remove it from the repository, only from this collection. Are you sure you want to remove this work from the collection?
         header:
-          actions: Action
-          title: Collection title
+          actions: 操作
+          title: コレクションのタイトル
       form_permission_under_embargo:
         help_html: "<strong>This work is under embargo.</strong> You can change the settings of the embargo here, or you can visit the %{edit_link} to deactivate it."
         legend_html: Visibility <small>Who should be able to view or download this content?</small>
@@ -407,7 +407,7 @@ ja:
         help_html: Select the file to be used as the thumbnail for this work.
         legend_html: サムネイル
       items:
-        actions: Actions
+        actions: 操作
         date_uploaded: アップロード日
         empty: This %{type} has no files associated with it. Click "edit" to add more files.
         header: Items
@@ -464,7 +464,7 @@ ja:
         edit:
           desc: このコレクションを編集
           label: コレクションを編集
-        header: Actions
+        header: 操作
         nest_collections:
           button_label: サブコレクションを追加
           desc: Nest other collections within this Collection
@@ -485,7 +485,7 @@ ja:
       form:
         additional_fields: 追加の項目
         description: Descriptions
-      is_part_of: Is part of
+      is_part_of: 所属するコレクション
       select_form:
         close: 閉じる
         create: 保存
@@ -606,8 +606,8 @@ ja:
             remove_this_sub_collection_description: Removing this sub-collection will not remove it from the repository, only from this parent collection.  Are you sure you want to remove this sub-collection?
           sub_collections_of_collection_description: These collections are currently sub-collections of this collection
           table:
-            action: Action
-            collection_title: Collection Title
+            action: 操作
+            collection_title: コレクションのタイトル
           this_collection_in_other_collections_description: You can add this collection to other collections as a sub-collection.
         form_share:
           add_group: グループを追加
@@ -618,15 +618,15 @@ ja:
         form_share_table:
           allow_all_registered: Allow all registered
           depositors:
-            action: Action
-            agent_name: User/Group
+            action: 操作
+            agent_name: ユーザ/グループ
             empty: No depositors have been added to this collection.
             help: Depositors of this collection can view the collection and add works to it, even if the visibility permissions of the collection otherwise would not permit them to view it.
             remove: 削除
             title: Depositors
             type: 種別
           managers:
-            action: Action
+            action: 操作
             agent_name: User/Group
             empty: No managers have been added to this collection.
             help: Managers of this collection can add to and remove works from the collection, modify collection metadata, and delete the collection.
@@ -635,8 +635,8 @@ ja:
             title: Managers
             type: 種別
           viewers:
-            action: Action
-            agent_name: User/Group
+            action: 操作
+            agent_name: ユーザ/グループ
             empty: No viewers have been added to this collection.
             help: Viewers of this collection can view it even if the visibility permissions of the collection otherwise would not permit them to view it.
             help_with_works: For collections of type %{type_title}, when works are created directly in this collection, the viewers are given read access to the new work.
@@ -681,14 +681,14 @@ ja:
           delete_admin_set_deny: This collection is defined as Admin Set and is not empty. To delete this Admin Set, you must first remove (delete or move to another Admin Set collection) all items from the Admin Set.
           delete_collection: コレクションを削除
           delete_collection_deny: You do not have sufficient privileges to delete this collection.
-          delete_collections: Delete collections
+          delete_collections: コレクションを削除
           delete_collections_deny: You do not have sufficient privileges to delete one or more collections.
-          delete_work: Delete Work
+          delete_work: 著作を削除
           edit_admin_set: コレクションを編集
           edit_collection: コレクションを編集
           edit_collection_deny: You do not have sufficient privileges to edit this collection.
           edit_selected: Edit Selected
-          edit_work: Edit Work
+          edit_work: 著作を編集
           highlight: Highlight Work on Profile
           members_no_access: You do not have sufficient privileges to any of the selected members
           nesting_not_allowed: Collections of this type do not support nesting.
@@ -696,8 +696,8 @@ ja:
           select: 選択
           select_all: Select Current Page
           select_none: Select None
-          transfer: Transfer Ownership of Work
-          unhighlight: Unhighlight Work
+          transfer: 著作の所有権を譲渡
+          unhighlight: ハイライトを解除
           view_admin_set: コレクションを表示
           view_collection: コレクションを表示
           work_confirmation: Deleting a work from %{application_name} is permanent. Click OK to delete this work from %{application_name}, or Cancel to cancel this operation
@@ -712,18 +712,18 @@ ja:
           users: 'Users:'
         collections: コレクション
         facet_label:
-          collections: 'Filter collections:'
+          collections: 'コレクションを絞り込む:'
           highlighted: 'Filter highlights:'
           shared: 'Filter shares:'
           works: 'Filter works:'
         heading:
           access: Access
-          action: Actions
+          action: 操作
           collection_type: コレクションの種別
           date_modified: 更新日
           date_uploaded: 追加日
-          highlighted: Highlighted
-          items: Items
+          highlighted: ハイライト
+          items: アイテム
           last_modified: 最終更新日
           title: タイトル
           type: 種別
@@ -738,7 +738,7 @@ ja:
           press_to: Press to
           results_per_page: Number of results to display per page
           show_label: Display all details of
-        works: Works
+        works: 著作
         your_collections: 自分のコレクション
         your_works: 自分の著作
       nest_collections_form:
@@ -839,7 +839,7 @@ ja:
         download_title: Download %{file_set}
         edit: 編集
         edit_title: Edit %{file_set}
-        header: Select an action
+        header: 操作を選択
         versions: Versions
         versions_title: Display previous versions
       groups_description:
@@ -915,7 +915,7 @@ ja:
     mailbox:
       date: Date
       delete: Delete Message
-      empty: No notifications found
+      empty: 通知はありません
       message: Message
       notifications_deleted: Notifications have been deleted
       subject: Subject
@@ -998,7 +998,7 @@ ja:
       show:
         type: Show
       table:
-        actions: Actions
+        actions: 操作
         expires: Expires
         key: Key
         link: Link
@@ -1021,7 +1021,7 @@ ja:
     transfers:
       new:
         confirm: Are you sure you want to transfer ownership of this work to another user? Click Ok to transfer or Cancel to return to the transfer screen
-        header: Transfer Ownership
+        header: 所有権の譲渡
         placeholder: ユーザを検索
         sr_only_description: Select a user to transfer "%{work_title}" to, add optional comments and then press transfer.
         title: Transfer Ownership of "%{work_title}"
@@ -1166,7 +1166,7 @@ ja:
         allow_multiple_membership: MULTIPLE MEMBERSHIP
         assigns_visibility: VISIBILITY
         assigns_workflow: WORKFLOW
-        badge_color: Badge Color
+        badge_color: バッジの色
         brandable: BRANDING
         description: Type description
         discoverable: DISCOVERY
